<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="40dp"
        android:paddingRight="10dp"
        android:paddingBottom="40dp"
        tools:context=".BookAppointmentFragment">

        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
             android:orientation="horizontal">>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="left"
                 android:text="@string/apmtServiceType"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />

             <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/aptServiceType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="15dp" />
         </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal">>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/apmtDate"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/aptServiceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/book_apt_select_date_btn" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/apmtTimeSlotText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/timeSlotSelectDateFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/selectDateBefore"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/grey"
            android:textSize="15sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookAptTimeSlotsRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkout"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_corner_btn"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/baseline_navigate_next_24"
            app:iconGravity="textEnd"
            android:text="@string/btnContinue" />

    </LinearLayout>
</ScrollView>