<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EditProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loadingSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <!-- <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ep_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:src="@drawable/ic_launcher_background"
             app:shapeAppearanceOverlay="@style/Circular" />

         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/cImage_ep"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/eProfile_changeImage"
             android:textColor="@color/misty_blue_dark" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_fname_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fNameSignUp"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_lname_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lNameSignUp"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_email_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailSignUp"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_phone_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxLength="10"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneEProfile"
                android:inputType="phone|number"
                android:paddingHorizontal="8dp"

                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_streetAddress_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_streetAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eProfileStreetAddress"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_aptSuiteNumber_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_aptSuiteNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eProfileSuitNumber"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_city_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eProfileCity"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_province_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/eProfileProvince"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eprofile_postalCode_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eprofile_postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eProfilePostalCode"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ep_changePw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/eProfile_changePassword"
            android:textColor="@color/misty_blue_dark" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/eprofileBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_corner_btn"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btneProfile"
            app:icon="@drawable/baseline_save_24"
            app:iconGravity="textEnd" />


    </LinearLayout>

</ScrollView>
