<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="40dp"
    tools:context=".ProfileChangePasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ep_current_password_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ep_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/epCurrentPassword"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ep_new_password_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ep_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ep_new_password"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ep_new_password_con_til"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ep_new_password_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ep_new_password_con"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/epChangePWBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_corner_btn"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btnepChangePW" />


    </LinearLayout>

</LinearLayout>